--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,6 +74,7 @@ bEnableDistanceFieldFontRasterization=False
 bUseFixedFrameRate=False
 FixedFrameRate=60.000000
 GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+LocalPlayerClassName=/Script/Aura.AuraCommonLocalPlayer
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
