Remaking UI with CommonGamePrimaryLayout - UI classes done

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,3 +10,7 @@ CopyrightNotice=Copyright Kelly259
 [/Script/CommonLoadingScreen.CommonLoadingScreenSettings]
 LoadingScreenWidget=/Game/Blueprints/UI/LoadingScreen/WBP_LoadingScreen.WBP_LoadingScreen_C
 
+[/Script/Aura.AuraUIManagerSubsystem]
+DefaultUIPolicyClass=/Game/Blueprints/UI/CommonUI/Layout/B_UIPolicy.B_UIPolicy_C
+
+
