1) Fully replaced UI with Common PrimaryGameLayout. 2) Replaced every core actor with CommonGame Modular actors. 3) Added again dispatchers to widget controller to have both dispatchers and messages. 4) Reimagined enhanced input config inside player controller with tags and binding inside c++. 5) Added CommonUI inputs in Projects Settings->Plugins->CommonUI

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -13,4 +13,6 @@ LoadingScreenWidget=/Game/Blueprints/UI/LoadingScreen/WBP_LoadingScreen.WBP_Load
 [/Script/Aura.AuraUIManagerSubsystem]
 DefaultUIPolicyClass=/Game/Blueprints/UI/CommonUI/Layout/B_UIPolicy.B_UIPolicy_C
 
+[/Script/CommonInput.CommonInputSettings]
+InputData=/Game/Blueprints/UI/CommonUI/Input/BP_CUI_InoutData.BP_CUI_InoutData_C
 
