--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,3 +83,10 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
 
+[/Script/CommonUI.CommonUIInputSettings]
+bLinkCursorToGamepadFocus=True
+UIActionProcessingPriority=10000
++InputActions=(ActionTag=UI.Action.MainMenu,DefaultDisplayName="",KeyMappings=((Key=Z),(Key=Gamepad_Special_Right)))
++InputActions=(ActionTag=UI.Action.GameMenu,DefaultDisplayName="",KeyMappings=((Key=Tab),(Key=Gamepad_DPad_Down)))
+AnalogCursorSettings=(PreprocessorPriority=2,PreprocessorRegistrationInfo=(Type=Game,Priority=2),bEnableCursorAcceleration=True,CursorAcceleration=1500.000000,CursorMaxSpeed=2200.000000,CursorDeadZone=0.250000,HoverSlowdownFactor=0.400000,ScrollDeadZone=0.200000,ScrollUpdatePeriod=0.100000,ScrollMultiplier=2.500000)
+
